--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ pyside6 = "^6.7.3"
 matplotlib = "^3.9.2"
 jinja2 = "^3.1.4"
 
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+
+
